# sympathetic-resonance

./: .gitignore  ANALYSIS_AND_IMPROVEMENTS.md  BALANCE_FRAMEWORK.md  BALANCE_REFERENCE_TABLES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FACTION_ITEMS_DESIGN_COMPLETE.md  GAME_DESIGN_DOCUMENT.md  HANDOFF.md  LICENSE  MVP_DEFINITION.md  NEXT_STEPS.md  PERFORMANCE_ASSESSMENT.md  README.md  RISK_ASSESSMENT.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-09-30_CONTINUED.md  UX_DESIGN_STANDARDS.md  economic_framework.json  faction_npcs.json  location_npcs.json  magic_theory_progression.json  populate_faction_items.py  sample_locations.json  sample_story_arc.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_contribution.md  feature_request.md  magic_system_addition.md  system_enhancement.md
.github/workflows/: ci.yml  release.yml
benches/: performance_benchmarks.rs
content/: database.db
docs/: ARCHITECTURE.md  COMBAT_SYSTEM_DESIGN.md  COMPREHENSIVE_SYSTEMS_ANALYSIS.md  DEVELOPMENT_SETUP.md  UPDATED_ROADMAP.md  project-management.md  roadmap-issue-tracker.md
src/: content.rs  integration_tests.rs  lib.rs  main.rs  performance_tests.rs  ui.rs
src/core/: events.rs.bak  game_engine.rs  mod.rs  player.rs  world_state.rs
src/input/: command_handlers.rs  command_parser.rs  mod.rs  natural_language.rs
src/systems/: combat.rs  (+7 more)
tests/: educational_content_integration.rs  item_system_integration.rs  quest_dialogue_integration.rs  take_drop_integration.rs  unequip_integration.rs
(+19 files in other folders)
