[package]
name = "sympathetic-resonance"
version = "0.1.0"
edition = "2021"
description = "A text adventure game featuring science-based magic in a low fantasy world"
authors = ["Adventure Game Team"]
license = "MIT"

[dependencies]
# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and persistence
rusqlite = { version = "0.29", features = ["bundled"] }

# Command line parsing and utilities
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"

# Async runtime (for future features)
tokio = { version = "1.0", features = ["full"] }

# Terminal UI
ratatui = "0.24"
crossterm = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Random number generation
rand = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
pretty_assertions = "1.0"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true